Fixed whitespace beneath images

--- a/src/css/_recipe_page.scss
+++ b/src/css/_recipe_page.scss
@@ -48,6 +48,7 @@ $recipeLayoutSwitch: 650px;
 		margin-bottom: $innerPadding;
 
 		img {
+			display: block;
 			width: 100%;
 		}
 	}
