--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -114,6 +114,7 @@ p,span {
 
 		img{
 			width: 100%;
+			display: block;
 		}
 	}
 
@@ -210,6 +211,7 @@ p,span {
 
 		img {
 			height:100%;
+			display: block;
 		}
 	}
 
